--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.14.1",
     "nunjucks": "^3.2.4",
     "socket.io": "^4.8.1"
   }
